--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,95 +1,91 @@
 @import '@fontsource/fira-mono';
 
 :root {
-	--color-theme-1: rgb(255, 49, 49);
-	--color-theme-2: #ff7733;
-	--color-bg-base: #25272d;
-	--color-bg-highlight: color-mix(in srgb, var(--color-bg-base) 80%, var(--color-theme-1));
-	--color-text: #f1fec6;
+    --color-theme-1: #ff3131;
+    --color-theme-2: #ff7733;
+    --color-text: #f1fec6;
+    --color-bg-base: #25272d;
+    --color-bg-highlight: color-mix(in srgb, var(--color-bg-base) 80%, var(--color-theme-1));
 
-	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	--font-mono: 'Fira Mono', monospace;
-	font-family: var(--font-body);
-	color: var(--color-text);
+    --font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+        Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --font-mono: 'Fira Mono', monospace;
+    font-family: var(--font-body);
+    color: var(--color-text);
 }
 
 body {
-	min-height: 100vh;
-	height: 100%;
-	margin: 0;
+    min-height: 100vh;
+    height: 100%;
+    margin: 0;
 
-	--glow-width: 15%;
-	--glow-intensity: 25%;
-	/* Values closer to 100% are less noticeable */
-	--glow-color: color-mix(
-		in srgb,
-		var(--color-bg-highlight) var(--glow-intensity),
-		var(--color-bg-base)
-	);
+    --glow-width: 15%;
+    --glow-intensity: 25%;
+    /* Values closer to 100% are less noticeable */
+    --glow-color: color-mix(in srgb,
+            var(--color-bg-highlight) var(--glow-intensity),
+            var(--color-bg-base));
 
-	background-color: var(--color-bg-base);
-	background-image: linear-gradient(
-		to right,
-		var(--glow-color) 0%,
-		var(--color-bg-base) var(--glow-width),
-		var(--color-bg-base) calc(100% - var(--glow-width)),
-		var(--glow-color) 100%
-	);
-	animation: flicker 5s infinite;
+    background-color: var(--color-bg-base);
+    background-image: linear-gradient(to right,
+            var(--glow-color) 0%,
+            var(--color-bg-base) var(--glow-width),
+            var(--color-bg-base) calc(100% - var(--glow-width)),
+            var(--glow-color) 100%);
+    animation: flicker 5s infinite;
 }
 
 h1,
 h2,
 p {
-	font-weight: 400;
+    font-weight: 400;
 }
 
 p {
-	line-height: 1.5;
+    line-height: 1.5;
 }
 
 a {
-	color: var(--color-theme-1);
-	text-decoration: none;
+    color: var(--color-theme-1);
+    text-decoration: none;
 }
 
 a:hover {
-	text-decoration: underline;
+    text-decoration: underline;
 }
 
 h1 {
-	font-size: 2rem;
-	text-align: center;
+    font-size: 2rem;
+    text-align: center;
 }
 
 h2 {
-	font-size: 1.5rem;
+    font-size: 1.5rem;
 }
 
 input,
 button {
-	font-size: inherit;
-	font-family: inherit;
+    font-size: inherit;
+    font-family: inherit;
 }
 
 button:focus:not(:focus-visible) {
-	outline: none;
+    outline: none;
 }
 
 @media (min-width: 720px) {
-	h1 {
-		font-size: 2.4rem;
-	}
+    h1 {
+        font-size: 2.4rem;
+    }
 
-	h2 {
-		font-size: 1.8rem;
-	}
+    h2 {
+        font-size: 1.8rem;
+    }
 }
 
 section {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
