Add a line on the left side of a quote

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -89,3 +89,11 @@ section {
     justify-content: center;
     align-items: center;
 }
+
+blockquote {
+    border-left: 0.5rem solid #00000055;
+}
+
+blockquote > p {
+    padding: 0.5rem;
+}
