--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -3,9 +3,11 @@
 :root {
     --color-theme-1: #ff3131;
     --color-theme-2: #ff7733;
-    --color-text: #f1fec6;
+    --color-text: #ffeeee;
+    --color-text-card: #000000;
     --color-bg-base: #25272d;
     --color-bg-highlight: color-mix(in srgb, var(--color-bg-base) 80%, var(--color-theme-1));
+    --color-bg-card: #ffeeee;
 
     --font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
         Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
