--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -7,7 +7,7 @@
     --color-text-card: #101010;
     --color-bg-base: #25272d;
     --color-bg-highlight: color-mix(in srgb, var(--color-bg-base) 80%, var(--color-theme-1));
-    --color-bg-card: #fce8d6;
+    --color-bg-light: #fce8d6;
 
     --font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
         Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -21,15 +21,7 @@ body {
     height: 100%;
     margin: 0;
 
-    --glow-width: 15%;
-    --glow-intensity: 25%;
-    /* Values closer to 100% are less noticeable */
-    --glow-color: color-mix(in srgb,
-            var(--color-bg-highlight) var(--glow-intensity),
-            var(--color-bg-base));
-
     background-color: var(--color-bg-base);
-    animation: flicker 5s infinite;
 }
 
 h1,
@@ -54,6 +46,7 @@ a:hover {
 h1 {
     font-size: 2rem;
     text-align: center;
+    margin-top: 5rem;
 }
 
 h2 {
